<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:layout_marginTop="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:ems="10"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_login"
        android:layout_marginTop="50dp"
        android:hint="@string/password"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:inputType="textPassword"
        android:ems="10"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="logIn"
        android:text="@string/start"
        android:textSize="26sp"
       android:background="@color/colorPrimary"/>

    <CheckBox
        android:id="@+id/cb_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="20dp"
        android:hint="@string/box"
        android:layout_centerHorizontal="true"
        android:onClick="saveLoginPassword"/>

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_box"
        android:layout_marginTop="20dp"
        android:hint="@string/forget"
        android:layout_centerHorizontal="true"
        android:onClick="sendLoginPassword"/>


</RelativeLayout>