<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/employee_header"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
       android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tv_header"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_department_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dep_header"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/imageView"
        />

    <TextView
        android:id="@+id/tv_department_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="#357a38"
        android:layout_below="@id/tv_department_header"
        />

    <TextView
        android:id="@+id/tv_subDepartment_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/subDep_header"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/tv_department_info"
        />

    <TextView
        android:id="@+id/tv_subDepartment_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="#357a38"
        android:layout_below="@id/tv_subDepartment_header"
        />

    <TextView
        android:id="@+id/tv_subSubDepartment_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/subSubDep_header"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/tv_subDepartment_info"
        />

    <TextView
        android:id="@+id/tv_subSubDepartment_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="#357a38"
        android:layout_below="@id/tv_subSubDepartment_header"
        />

    <GridLayout
        android:id="@+id/grid_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:layout_below="@id/tv_subSubDepartment_info"
        android:layout_marginTop="5dp"
        android:paddingEnd="5dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_employee_id_header"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="top|start|end"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/employee_id"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_employee_id_data"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="20"
            android:layout_gravity="top|start|end"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="20dp"
            android:soundEffectsEnabled="true"
            android:textAlignment="center"
            android:textColor ="#357a38"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:typeface="serif"
            />

        <TextView
            android:id="@+id/tv_employee_name_header"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="top|start|end"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/employee_name"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_employee_name_data"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="20"
            android:layout_gravity="top|start|end"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="20dp"
            android:soundEffectsEnabled="true"
            android:textAlignment="center"
            android:textColor = "#357a38"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tv_employee_title_header"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="top|start|end"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/employee_title"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_employee_title_data"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="20"
            android:layout_gravity="top|start|end"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="20dp"
            android:soundEffectsEnabled="true"
            android:textAlignment="center"
            android:textColor = "#357a38"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tv_employee_email_header"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="top|start|end"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/employee_email"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_employee_email_data"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="20"
            android:layout_gravity="top|start|end"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="20dp"
            android:soundEffectsEnabled="true"
            android:textAlignment="center"
            android:textColor = "#357a38"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tv_employee_prone_header"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="top|start|end"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/employee_phone"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_employee_phone_data"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="20"
            android:layout_gravity="top|start|end"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="20dp"
            android:soundEffectsEnabled="true"
            android:textAlignment="center"
            android:textColor = "#357a38"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:typeface="serif"
            android:onClick="callToEmployee"/>


    </GridLayout>



</RelativeLayout>